--- a/styles/style.css
+++ b/styles/style.css
@@ -53,9 +53,13 @@ ul {
 }
 
 @media (max-width: 640px) {
-  p {
+  p, li {
     padding: 0;
     font-size: 18px;
+  }
+
+  ul {
+    margin-left: 0;
   }
 
   #logo {
